--- a/test_websocket_server/Cargo.toml
+++ b/test_websocket_server/Cargo.toml
@@ -13,3 +13,5 @@ serde = {version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 futures = { version = "0.3", default-features = false }
 uuid = { version = "1.1.2", features = ["serde", "v4"] }
+pretty_env_logger = "0.5"
+futures-util = { version = "0.3", default-features = false, features = ["sink"] }
