--- a/DevHubExtension/manifest.json
+++ b/DevHubExtension/manifest.json
@@ -31,5 +31,5 @@
       "128": "src/assets/icons/get_started128.png"
     }
   },
-  "permissions": ["storage", "tabs"]
+  "permissions": ["storage", "tabs", "cookies"]
 }
