--- a/DevHubExtension/manifest.json
+++ b/DevHubExtension/manifest.json
@@ -12,11 +12,11 @@
   "content_scripts": [
     {
       "matches": ["https://*/*"],
-      "js": ["src/content/index.ts"]
+      "js": ["src/content/content_index.ts"]
     }
   ],
   "background": {
-    "service_worker": "src/background/index.ts"
+    "service_worker": "src/background/background_index.ts"
   },
   "options_ui": {
     "page": "src/options/options.html",
@@ -31,5 +31,5 @@
       "128": "src/assets/icons/get_started128.png"
     }
   },
-  "permissions": ["storage", "tabs", "cookies"]
+  "permissions": ["storage", "tabs", "cookies", "webNavigation"]
 }
