--- a/DevHubExtension/manifest.json
+++ b/DevHubExtension/manifest.json
@@ -31,5 +31,12 @@
       "128": "src/assets/icons/get_started128.png"
     }
   },
-  "permissions": ["storage", "tabs", "cookies", "webNavigation"]
+  "permissions": [
+    "storage",
+    "tabs",
+    "cookies",
+    "webNavigation",
+    "clipboardWrite",
+    "clipboardWrite"
+  ]
 }
