--- a/development_hub/src-tauri/Cargo.toml
+++ b/development_hub/src-tauri/Cargo.toml
@@ -16,6 +16,10 @@ tauri-build = { version = "1.4", features = [] }
 tauri = { version = "1.4", features = ["shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tokio = { version = "1.29.1", features = ["full"] }
+tracing = "0.1.37"
+tracing-subscriber = "0.3.17"
+axum = "0.6.19"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
