--- a/test_websocket_server/Cargo.toml
+++ b/test_websocket_server/Cargo.toml
@@ -15,3 +15,5 @@ futures = { version = "0.3", default-features = false }
 uuid = { version = "1.1.2", features = ["serde", "v4"] }
 pretty_env_logger = "0.5"
 futures-util = { version = "0.3", default-features = false, features = ["sink"] }
+axum = "0.6.19"
+
