--- a/DevHubExtension/package.json
+++ b/DevHubExtension/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "w:build": "vite build --watch",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
