--- a/DevHubExtension/manifest.json
+++ b/DevHubExtension/manifest.json
@@ -38,5 +38,6 @@
     "webNavigation",
     "clipboardWrite",
     "clipboardWrite"
-  ]
+  ],
+  "host_permissions": ["127.0.0.1", "127.0.0.1:3030"]
 }
