--- a/development_hub/src-tauri/Cargo.toml
+++ b/development_hub/src-tauri/Cargo.toml
@@ -20,6 +20,8 @@ tokio = { version = "1.29.1", features = ["full"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 axum = "0.6.19"
+tower-http = { version = "0.4.3", features = ["cors"] }
+tower = "0.4.13"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
