--- a/development_hub/src-tauri/Cargo.toml
+++ b/development_hub/src-tauri/Cargo.toml
@@ -22,6 +22,9 @@ tracing-subscriber = "0.3.17"
 axum = "0.6.19"
 tower-http = { version = "0.4.3", features = ["cors"] }
 tower = "0.4.13"
+parking_lot = "0.12.1"
+color-eyre = "0.6.2"
+thiserror = "1.0.44"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
